--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "vant": "^4.7.2",
     "vue": "^3.3.4",
+    "vite-plugin-style-import": "^1.4.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.4.5"
-    
+    "vite": "^4.4.5",
+    "unplugin-auto-import": "^0.11.5",
+    "unplugin-vue-components": "^0.22.11"
   }
 }
